# ft_linear_regression

./: .env  .gitignore  Cargo.toml  Makefile  README.md
gui/: Cargo.toml  index.html
gui/assets/: manifest.json  sw.js
gui/src/: app.rs  lib.rs  main.rs  utils.rs
gui/src/components/: controls.rs  mod.rs  model_error_screen.rs  navbar.rs  plot.rs  sidebar.rs  status.rs
gui/src/settings/: grid_settings.rs  plot_settings.rs  sidebar_settings.rs
gui_2/: Cargo.toml
gui_2/src/: main.rs  utils.rs
gui_2/src/components/: mod.rs  plane.rs  sidebar.rs
gui_2/src/settings/: mod.rs  plot_settings.rs
linear_regression/: Cargo.toml
linear_regression/src/: lib.rs  linear_regression.rs  normalization.rs  utils.rs
predictor/: Cargo.toml
predictor/src/: main.rs
trainer/: Cargo.toml
trainer/src/: main.rs
