[package]
name = "gui"
version = "0.1.0"
authors = ["pulgamecanica <pulgamecanica11@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
plotters = "0.3.7"
num-format = "0.4"
egui_plot = "0.30.0"
linear_regression = { path = "../linear_regression" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
opt-level = 2
